# Projects

./: LICENSE  README.md
CIS520_final_project/: random_forest_watch_gyro.ipynb
CIS580_hw5_stereo_reconstruction/: README.md  plane_sweep_stereo.py  two_view_stereo.py
Classificiation_models/: Model1.ipynb  README.md  all_xgboost_randomforest_models.ipynb  only_3_classes.ipynb  random_forest_all.ipynb  random_forest_pca.ipynb  random_forest_pca_phone_accel.ipynb  random_forest_phone_gyro.ipynb  random_forest_watch_accel.ipynb  xgboost_pca.ipynb
ESE546_project_Transformer/: README.md
ESE650_hw3_slam/: main.py  slam.py
ESE650_project_ensemble_kalman/: test_and_plot.py  train.py
Ensemble_Kalman_Filter/: README.md  load_data.py
Ensemble_Kalman_Filter/complimentary/: complementary_filter.py  sandbox_complementary_filter.py
Ensemble_Kalman_Filter/eskf/: sandbox_vio.py  stereo.py  vio.py
Ensemble_Kalman_Filter/ukf/: estimate_rot.py  quaternion.py
MEAM517_project_CCMPC/: README.md
MEAM517_project_CCMPC/graphs/: path_1.npy  path_2.npy  plot_paths_2.py  waypoints_2.npy  waypoints_3.npy
MEAM517_project_CCMPC/poster/: Poster_Template.pptx
Model_Predictive_Control/: .gitignore  README.md  multi_sim_launch.sh  requirements.txt  sim_launch.sh  teleop.sh
Model_Predictive_Control/src/path_planning/: CMakeLists.txt
Model_Predictive_Control/src/path_planning/scripts/: astar.cpp  cpp_pub.cpp  python_subscriber.py  simulate_turtlebot.py
SLAM/: .gitignore  README.md
Stereo_Reconstruction/: plane_sweep.ipynb  two_view.ipynb
Transformer_model/: README.md
VIO_for_UAV/: README.md
Variational_Auto_encoder/: README.md  vae_script.py
cis520_final_project/: Model-Summary.xlsx  README.md  hyperparameter_tuning_v1.ipynb  xgboost_all.ipynb
(+284 files in other folders)
